# schemascope

./: .gitignore  LICENSE  README.md  publish.sh  pyproject.toml
examples/: schema.json  schema.txt  schema.xml  schema.yaml
examples/data/: users.csv
src/schemascope/: __init__.py  __main__.py  assemble.py  cli.py  connector.py  io.py  mapping.py  model.py  profile.py  qa.py  render.py  schema_loader.py  scope.py  tokens.py  typeinfer.py  validate.py
src/schemascope/data/: corpus_schema.json
tests/: conftest.py  synth.py  test_cli.py  test_connector.py  test_dialect_cross_engine.py  test_e2e.py  test_engine_generic.py  test_hardening.py  test_mapping.py  test_meridian_hardening.py  test_migration_robustness.py  test_model.py  test_package.py  test_profile.py  test_qa.py  test_schema_loader.py  test_sql_connector.py  test_tokens.py  test_typeinfer.py  test_variation_hardening.py
